nginx/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: httpd-lb-svc
  namespace: test
spec:
  selector:
    app: httpd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
