nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: httpd.sainath.quest
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpd-lb-svc
            port:
              number: 80
